# form

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  README.md  appveyor.yml  configure.ac
.github/: dependabot.yml
.github/actions/setup-build/: action.yml
.github/workflows/: build.yml  ci-macos.yml  ci.yml  deploy.yml  doc.yml  test.yml  test2.yml
check/: .rubocop.yml  Makefile.am  README.md  benchmark-fu.sh  check-checkpoint.sh  check.rb  coverage.frm  diagram.frm  diagrams.frm  examples.frm  features.frm  fixes.frm
check/aap/: fu.frm
check/checkpoint/: checkpoint.frm
check/diagrams/: compare.frm  diagrams.h  qcd.frm  qgraf.frm  vacuum-bubbles.frm
check/extra/: forcer.frm  mincer.frm
check/forcer/: forcer.frm
check/qgraf/: qgraf.frm
doc/: form.1
doc/manual/: .latex2html-init  Makefile.am  diagrams.tex  float.tex  functions.tex  manual.tex.in  module.tex  optim.tex  prepro.tex  sorting.tex  startup.tex  statements.tex  variable.tex
scripts/: _run_latex2html-permalink-sed.py  check-folds.py  check-pad.py  run-latex2html.sh  stedi-folds.py  travis-after_success.sh  travis-install.sh  travis-script.sh  update-copyright.sh
sources/: CMakeLists.txt  Makefile.am  argument.c  bugtool.c  checkpoint.c  comexpr.c  compcomm.c  compiler.c  compress.c  comtool.c  comtool.h  config-cmake.h.in  declare.h  diagrams.c  diawrap.cc  dict.c  dollar.c  evaluate.c  execute.c  extcmd.c  factor.c  features.cc  findpat.c  flintinterface.cc  flintinterface.h  flintwrap.cc  float.c  form3.h  fsizes.h  ftypes.h  function.c  fwin.h  gdbtool.cc  gentopo.cc  grcc.cc  grcc.h  grccparam.h  if.c  import.cc  index.c  (+57 more)
